# Trim2Sort

./: .gitignore  README.md  execute(開啟請按我).bat  main.py  ngs.py  ngs_ori0529.py  ngs_ori0915.py  pyproject.toml  ref_ver3_20240804.xlsx  ref_ver6_0918.xlsx  sanger.py  sanger_01.py  sanger_ori0914.py  zh_adder.py  更新日誌(read me).txt
Trim2Sort_ver3.0.0/: exercute(開啟請按我).bat  main.py  ngs.py  sanger.py  zh_adder.py  更新日誌(read me).txt
dependencies/Trimmomatic-0.39/Trimmomatic-0.39/adapters/: COIF1R1.fa  MiFish.fa
docs/: dada2_readme.txt  dada2_seqdivider.R  dada2analysis_var2.py
scripts/: make_blastndb_helper.py
src/: __init__.py  main.py  ngs.py  ngs_dada2.py  ngs_method_selector.py  sanger.py  zh_adder.py
src/utils/: __init__.py  excel_utils.py  logger_utils.py  path_utils.py  sequence_utils.py  subprocess_utils.py  ui_config.py
